# AI-Agents-with-Crew-AI

./: README.md
AI-Agents-with-Crew-AI/: pyproject.toml  report.md
AI-Agents-with-Crew-AI/src/reasearch_devops_tools/: crew.py  main.py
